@@ -12,6 +12,10 @@
       \pkg{tools}) now can check for \emph{specific} error or warning
       classes via new optional 2nd argument \code{classes} (which is not
       back compatible with previous use of unnamed 2nd arg.)
+
+      \item \code{Df2formula()}, the utility for the data frame method of
+      \code{formula()}, now works without parsing and explicit evaluation,
+      starting from Suharto Anggono's suggestion in \PR{17555}.
     }
   }
 
